# nbte-bridge

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  README_RUNES.md  docker-compose.dev.yaml  docker-compose.encrypted.yaml  docker-compose.testnet.yaml  env.encrypted-common  env.integrationtest  env.test  env.testnet  env.testnet-common  github-buildx-cache.json  post_docker_startup.sh  start_harness.py  start_runes_testserver.py
.github/workflows/: bridge_workflow.yml
assets/runes/: runebridge.excalidraw
bridge_contracts/: Dockerfile  docker-entrypoint.sh  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
bridge_contracts/.openzeppelin/: unknown-111.json  unknown-30.json  unknown-31.json  unknown-60808.json
bridge_contracts/config/: base.ts
bridge_contracts/contracts/: BTCAddressValidator.sol  Bridge.sol  IBTCAddressValidator.sol  IPrecompiledMintingContract.sol  PrecompiledMintingContractMock.sol
bridge_contracts/docker-minimal/: hardhat.config.ts
bridge_frontend/: .env-local  Dockerfile  README.md  package-lock.json  package.json
bridge_frontend/public/: index.html
bridge_frontend/src/: App.tsx  index.css  index.tsx  reportWebVitals.ts
bridge_node/: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  entrypoint.sh  pyproject.toml
bridge_node/bridge/: __main__.py  cors.py  decimalcontext.py  main.py  main_bridge.py  sentry.py
bridge_node/bridge/api/: __init__.py  app.py  exceptions.py  views.py
bridge_node/bridge/api/monitor/: views.py
bridge_node/bridge/api/monitor/templates/: monitor.jinja2
bridge_node/bridge/api/monitor/templates/monitor/: base.jinja2  deposits.jinja2  multisig.jinja2  runes.jinja2  sanity_check.jinja2  users.jinja2
bridge_node/bridge/api_client/: __init__.py
bridge_node/bridge/auth/: bridge_ssl.py  challenge.py
bridge_node/bridge/bridges/runes/: anemic.py  bridge.py  config.py  evm.py  faux_service.py  messages.py  models.py  service.py  views.py  wiring.py
bridge_node/bridge/bridges/runes/abi/: RuneBridge.json  RuneSideToken.json  RuneToken.json
bridge_node/bridge/bridges/runes/templates/: deposit_monitor.jinja2  monitor.jinja2
bridge_node/bridge/bridges/tap_rsk/: bridge.py  common.py  config.py  models.py  rsk.py  rsk_scanner.py  rsk_to_tap.py  tap.py  tap_deposits.py  tap_to_rsk.py
bridge_node/bridge/bridges/tap_rsk/abi/: TapUtils.json
bridge_node/bridge/btc/: deposits.py  derivation.py  monkeypatch.py  multisig.py  rpc.py  setup.py  types.py  utils.py
bridge_node/bridge/common/btc/: descriptors.py  estimation.py  fees.py  multisig_utils.py  rpc.py  setup.py  types.py  utils.py
bridge_node/bridge/common/evm/: account.py  contracts.py  provider.py  scanner.py  utils.py
bridge_node/bridge/common/evm/abi/: TapUtils.json  TestToken.json
bridge_node/bridge/common/interfaces/: bridge.py
bridge_node/bridge/common/messengers/: __init__.py  __main__.py  anemic.py
bridge_node/bridge/common/models/: __init__.py  meta.py  types.py
bridge_node/bridge/common/ord/: client.py  multisig.py  simple_wallet.py  transfers.py  types.py  utxos.py
bridge_node/bridge/common/p2p/: client.py  network.py
bridge_node/bridge/common/p2p/auth/: bridge_ssl.py  challenge.py
bridge_node/bridge/common/services/: db.py  key_value_store.py  transactions.py
bridge_node/bridge/common/tap/: client.py  deposits.py  wiring.py
bridge_node/bridge/common/utils/: __init__.py
bridge_node/bridge/config/: __init__.py  secrets.py
bridge_node/bridge/core/: node.py
bridge_node/bridge/evm/: account.py  contracts.py  provider.py  scanner.py  utils.py
bridge_node/bridge/evm/abi/: Bridge.json
bridge_node/bridge/models/: __init__.py  key_value_store.py  services.py
bridge_node/bridge/p2p/: client.py  messaging.py  network.py
bridge_node/bridge/tap/: client.py  deposits.py  wiring.py
bridge_node/certs/: create_ca_cert.sh  create_node_certs.sh
bridge_node/migrations/: env.py
bridge_node/migrations/versions/: 00000000_0000_INIT_migration.py  20240131_1654_0b9b8d327b29_key_value_pair.py  20240217_2254_2fa523364d25_tap_rsk_models.py  20240217_2357_a7e13c40a244_sender_rsk_address.py  20240403_1004_deb62cf78dee_rune_bridge_deposit_address.py  20240417_1737_5700ba4c4c88_modelrefactor1.py  20240418_0638_48d37f80fe27_rune_bridge.py
bridge_node/scripts/: create_ca_cert.py  create_ca_cert.sh  create_node_certs.py  create_node_certs.sh
bridge_node/tests/: compose.py  conftest.py  mock_network.py  services.py  test_deposit_address_derivation.py  test_example.py  test_services.py
bridge_node/tests/bridges/runes/: balances.py  bridge_util.py  conftest.py  test_rune_bridge.py
bridge_node/tests/bridges/tap_evm/: test_models.py
bridge_node/tests/common/ord/: conftest.py  test_ord_multisig.py  test_ord_multisig_fuzz.py
bridge_node/tests/common/p2p/: test_network.py
bridge_node/tests/integration/: conftest.py  constants.py  rune_bridge_integration_tests.py  tap_bridge_integration_tests.py  test_bitcointx.py  test_btc_to_evm.py  test_btclib.py  test_embit.py  test_evm_to_btc.py  test_rpc.py  test_rsk_to_btc.py  test_rune_bridge.py  test_tap_bridge.py  test_tap_to_rsk.py  utils.py
bridge_node/tests/integration/btc/: test_multisig.py
bridge_node/tests/integration/fixtures/: harness.py
bridge_node/tests/integration/libraries/: test_bitcointx.py  test_btclib.py  test_embit.py
bridge_node/tests/p2p/: test_challenge.py  test_network.py
bridge_node/tests/services/: __init__.py  bitcoind.py  config.py  hardhat.py  ord.py  postgres.py
bridge_node/tests/utils/: bitcoin.py  ord_batch.py  timing.py  types.py
doc/: ADR.md
docker/bitcoind/: Dockerfile  README  docker-entrypoint.sh
docker/bitcoind-regtest/: Dockerfile.bitcoind-base  docker-entrypoint.sh
docker/ord/: Dockerfile  README  docker-entrypoint.sh
docker/postgres/: .dockerignore  Dockerfile
local_dev/bitcoind-regtest/: bitcoin.conf  docker-entrypoint.sh
local_dev/hardhat/: Dockerfile
secrets/: env.template.json
server/: config_util.py  decrypt_config.py  encrypt_config.py  serve_with_secrets.py
(+44 files in other folders)
