[tool.poetry]
name = "SovrynNbteBridge"
version = "0.0"
description = "Sovryn NBTE Bridge"
authors = ["Sovryn <info+sovryn@interjektio.fi>"]
license = "BSD"
readme = ["README.md"]
repository = "https://github.com/DistributedCollective/nbte-bridge"
classifiers = [
    "Programming Language :: Python",
    "Framework :: Pyramid",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
keywords = ["web", "wsgi", "tet", "pyramid"]
packages = [{ include = "bridge" }]

[tool.poetry.plugins."paste.app_factory"]
main = "bridge:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
anemic = { git = "https://github.com/tetframework/anemic.git", rev = "3a397a5" }
python = "^3.10"
transaction = "*"
waitress = "*"
"zope.sqlalchemy" = "*"
SQLAlchemy = ">=2.0"
alembic = "*"
psycopg2 = "*"
click = "^7.0"
pyro5 = "^5.15"
venusian = "^3.1.0"
environ-config = "^23.2.0"
web3 = "^6.13.0"
eth-account = "^0.10.0"
eth-utils = "^2.3.1"
python-bitcointx = "^1.1.4"
pyramid = "^2.0.2"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
coverage = { extras = ["toml"], version = "^7.3.4" }
pytest-cov = "^4.1.0"
ruff = "^0.1.11"
pre-commit = "^3.6.0"
ipython = "^8.19.0"
ipdb = "^0.13.13"

[tool.pytest.ini_options]
addopts = [
    "--cov",
    "--cov-config",
    "pyproject.toml",
    "--cov-report",
    "lcov",
    "--cov-report",
    "term-missing",
]
testpaths = ["tests"]
python_files = ["test_*.py", "tests.py", "*_tests.py"]
markers = [
    "integration: marks tests as integration test, requiring for example postgres (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
branch = true
command_line = "-m pytest"
source = ["bridge"]
relative_files = true

[tool.coverage.report]
show_missing = true

[tool.coverage.lcov]
output = "coverage.lcov"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py310"
extend-exclude = ["migrations", "submodules"]
